--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,13 +7,13 @@ require:
 AllCops:
   TargetRubyVersion: 3.1.2
   Exclude:
-    - "db/schema.rb"
-    - "vendor/**/*"
-    - "**/vendor/**/*"
-    - "*/spec/dummy/**/*"
-    - "sandbox/**/*"
-    - "**/templates/**/*"
-    - "guides/node_modules/**/*"
+    - 'db/schema.rb'
+    - 'vendor/**/*'
+    - '**/vendor/**/*'
+    - '*/spec/dummy/**/*'
+    - 'sandbox/**/*'
+    - '**/templates/**/*'
+    - 'guides/node_modules/**/*'
 
 # We use class vars and will have to continue doing so for compatability
 Style/ClassVars:
@@ -29,7 +29,7 @@ Rails/UnknownEnv:
 # We need these names for backwards compatability
 Naming/PredicateName:
   Exclude:
-    - "app/serializers/**/*.rb"
+    - 'app/serializers/**/*.rb'
 
 # We want to name rescued errors as error not simply e.
 Naming/RescuedExceptionsVariableName:
@@ -114,15 +114,15 @@ Rails/SkipsModelValidations:
 # syntax in the specs files.
 Lint/AmbiguousBlockAssociation:
   Exclude:
-    - "*/spec/**/*"
-    - "spec/**/*" # For the benefit of apps that inherit from this config
+    - '*/spec/**/*'
+    - 'spec/**/*' # For the benefit of apps that inherit from this config
 
 # We use eval to add common_spree_dependencies into the Gemfiles of each of our gems
 Security/Eval:
   Exclude:
-    - "Gemfile"
-    - "common_spree_dependencies.rb"
-    - "*/Gemfile"
+    - 'Gemfile'
+    - 'common_spree_dependencies.rb'
+    - '*/Gemfile'
 
 Naming/VariableNumber:
   Enabled: false
@@ -440,216 +440,10 @@ Style/InPatternThen:
 Performance/BigDecimalWithNumericArgument:
   Enabled: true
 
-Performance/RedundantSortBlock:
+Gemspec/DevelopmentDependencies: # new in 1.44
   Enabled: true
-
-Performance/AncestorsInclude:
+Gemspec/RequireMFA: # new in 1.23
   Enabled: true
-
-Performance/StringInclude:
-  Enabled: true
-
-Performance/Squeeze:
-  Enabled: true
-
-Performance/SortReverse:
-  Enabled: true
-
-Performance/ReverseFirst:
-  Enabled: true
-
-Performance/RedundantStringChars:
-  Enabled: true
-
-Style/StringChars:
-  Enabled: true
-
-Style/RedundantSelfAssignmentBranch:
-  Enabled: true
-
-Style/QuotedSymbols:
-  Enabled: true
-
-Style/MultilineInPatternThen:
-  Enabled: true
-
-Style/FileRead:
-  Enabled: true
-
-Gemspec/RequireMFA:
-  Enabled: true
-
-Lint/RequireRelativeSelfPath:
-  Enabled: true
-
-Lint/UselessRuby2Keywords:
-  Enabled: true
-
-Naming/BlockForwarding:
-  Enabled: true
-
-Security/IoMethods:
-  Enabled: true
-
-Style/FileWrite:
-  Enabled: true
-
-Style/MapToHash:
-  Enabled: true
-
-Style/NestedFileDirname:
-  Enabled: true
-
-Style/NumberedParameters:
-  Enabled: false
-
-Style/NumberedParametersLimit:
-  Enabled: true
-
-Style/OpenStructUse:
-  Enabled: false
-
-Style/SelectByRegexp:
-  Enabled: true
-
-Performance/BlockGivenWithExplicitBlock:
-  Enabled: true
-
-Performance/CollectionLiteralInLoop:
-  Enabled: true
-
-Performance/ConcurrentMonotonicTime:
-  Enabled: true
-
-Performance/RedundantEqualityComparisonBlock:
-  Enabled: true
-
-Performance/RedundantSplitRegexpArgument:
-  Enabled: true
-
-Performance/MapCompact:
-  Enabled: false
-
-Performance/ConstantRegexp:
-  Enabled: true
-
-Performance/MethodObjectAsBlock:
-  Enabled: true
-
-Performance/StringIdentifierArgument:
-  Enabled: true
-
-Performance/Sum:
-  Enabled: true
-
-Rails/ActionControllerTestCase:
-  Enabled: false
-
-Rails/ActiveRecordCallbacksOrder:
-  Enabled: true
-
-Rails/AddColumnIndex:
-  Enabled: true
-
-Rails/AfterCommitOverride:
-  Enabled: true
-
-Rails/AttributeDefaultBlockValue:
-  Enabled: true
-
-Rails/CompactBlank:
-  Enabled: false
-
-Rails/DeprecatedActiveModelErrorsMethods:
-  Enabled: true
-
-Rails/DuplicateAssociation:
-  Enabled: true
-
-Rails/DuplicateScope:
-  Enabled: true
-
-Rails/DurationArithmetic:
-  Enabled: true
-
-Rails/EagerEvaluationLogMessage:
-  Enabled: true
-
-Rails/ExpandedDateRange:
-  Enabled: true
-
-Rails/FindById:
-  Enabled: true
-
-Rails/I18nLazyLookup:
-  Enabled: true
-
-Rails/I18nLocaleAssignment:
-  Enabled: true
-
-Rails/I18nLocaleTexts:
-  Enabled: false
-
-Rails/Inquiry:
-  Enabled: true
-
-Rails/MailerName:
-  Enabled: true
-
-Rails/MatchRoute:
-  Enabled: true
-
-Rails/MigrationClassName:
-  Enabled: true
-
-Rails/NegateInclude:
-  Enabled: true
-
-Rails/Pluck:
-  Enabled: true
-
-Rails/PluckInWhere:
-  Enabled: true
-
-Rails/RedundantPresenceValidationOnBelongsTo:
-  Enabled: true
-
-Rails/RedundantTravelBack:
-  Enabled: true
-
-Rails/RenderPlainText:
-  Enabled: true
-
-Rails/RenderInline:
-  Enabled: true
-
-Rails/RootJoinChain:
-  Enabled: true
-
-Rails/ShortI18n:
-  Enabled: true
-
-Rails/SquishedSQLHeredocs:
-  Enabled: true
-
-Rails/TimeZoneAssignment:
-  Enabled: true
-
-Rails/TransactionExitStatement:
-  Enabled: true
-
-Rails/UnusedIgnoredColumns:
-  Enabled: true
-
-Rails/WhereEquals:
-  Enabled: true
-
-Rails/WhereExists:
-  Enabled: true
-
-Rails/WhereNot:
-  Enabled: true
-
 Layout/LineContinuationLeadingSpace: # new in 1.31
   Enabled: true
 Layout/LineContinuationSpacing: # new in 1.31
@@ -664,7 +458,23 @@ Lint/RefinementImportMethods: # new in 1.27
   Enabled: true
 Lint/RequireRangeParentheses: # new in 1.32
   Enabled: true
+Lint/RequireRelativeSelfPath: # new in 1.22
+  Enabled: true
+Lint/UselessRescue: # new in 1.43
+  Enabled: true
+Lint/UselessRuby2Keywords: # new in 1.23
+  Enabled: true
+Naming/BlockForwarding: # new in 1.24
+  Enabled: true
 Security/CompoundHash: # new in 1.28
+  Enabled: true
+Security/IoMethods: # new in 1.22
+  Enabled: true
+Style/ArrayIntersect: # new in 1.40
+  Enabled: true
+Style/ComparableClamp: # new in 1.44
+  Enabled: true
+Style/ConcatArrayLiterals: # new in 1.41
   Enabled: true
 Style/EmptyHeredoc: # new in 1.32
   Enabled: true
@@ -672,37 +482,167 @@ Style/EnvHome: # new in 1.29
   Enabled: true
 Style/FetchEnvVar: # new in 1.28
   Enabled: true
+Style/FileRead: # new in 1.24
+  Enabled: true
+Style/FileWrite: # new in 1.24
+  Enabled: true
 Style/MagicCommentFormat: # new in 1.35
   Enabled: true
 Style/MapCompactWithConditionalBlock: # new in 1.30
   Enabled: true
+Style/MapToHash: # new in 1.24
+  Enabled: true
+Style/MapToSet: # new in 1.42
+  Enabled: true
+Style/MinMaxComparison: # new in 1.42
+  Enabled: true
+Style/MultilineInPatternThen: # new in 1.16
+  Enabled: true
+Style/NestedFileDirname: # new in 1.26
+  Enabled: true
+Style/NumberedParameters: # new in 1.22
+  Enabled: true
+Style/NumberedParametersLimit: # new in 1.22
+  Enabled: true
 Style/ObjectThen: # new in 1.28
+  Enabled: true
+Style/OpenStructUse: # new in 1.23
   Enabled: true
 Style/OperatorMethodCall: # new in 1.37
   Enabled: true
+Style/QuotedSymbols: # new in 1.16
+  Enabled: true
+Style/RedundantConstantBase: # new in 1.40
+  Enabled: true
+Style/RedundantDoubleSplatHashBraces: # new in 1.41
+  Enabled: true
 Style/RedundantEach: # new in 1.38
+  Enabled: true
+Style/RedundantHeredocDelimiterQuotes: # new in 1.45
   Enabled: true
 Style/RedundantInitialize: # new in 1.27
   Enabled: true
+Style/RedundantSelfAssignmentBranch: # new in 1.19
+  Enabled: true
 Style/RedundantStringEscape: # new in 1.37
+  Enabled: true
+Style/SelectByRegexp: # new in 1.22
+  Enabled: true
+Style/StringChars: # new in 1.12
+  Enabled: true
+Performance/AncestorsInclude: # new in 1.7
+  Enabled: true
+Performance/BlockGivenWithExplicitBlock: # new in 1.9
+  Enabled: true
+Performance/CollectionLiteralInLoop: # new in 1.8
+  Enabled: true
+Performance/ConcurrentMonotonicTime: # new in 1.12
+  Enabled: true
+Performance/ConstantRegexp: # new in 1.9
+  Enabled: true
+Performance/MapCompact: # new in 1.11
+  Enabled: true
+Performance/MethodObjectAsBlock: # new in 1.9
+  Enabled: true
+Performance/RedundantEqualityComparisonBlock: # new in 1.10
+  Enabled: true
+Performance/RedundantSortBlock: # new in 1.7
+  Enabled: true
+Performance/RedundantSplitRegexpArgument: # new in 1.10
+  Enabled: true
+Performance/RedundantStringChars: # new in 1.7
+  Enabled: true
+Performance/ReverseFirst: # new in 1.7
+  Enabled: true
+Performance/SortReverse: # new in 1.7
+  Enabled: true
+Performance/Squeeze: # new in 1.7
+  Enabled: true
+Performance/StringIdentifierArgument: # new in 1.13
+  Enabled: true
+Performance/StringInclude: # new in 1.7
+  Enabled: true
+Performance/Sum: # new in 1.8
   Enabled: true
 Rails/ActionControllerFlashBeforeRender: # new in 2.16
   Enabled: true
+Rails/ActionControllerTestCase: # new in 2.14
+  Enabled: true
 Rails/ActionOrder: # new in 2.17
+  Enabled: true
+Rails/ActiveRecordCallbacksOrder: # new in 2.7
   Enabled: true
 Rails/ActiveSupportOnLoad: # new in 2.16
   Enabled: true
+Rails/AddColumnIndex: # new in 2.11
+  Enabled: true
+Rails/AfterCommitOverride: # new in 2.8
+  Enabled: true
+Rails/AttributeDefaultBlockValue: # new in 2.9
+  Enabled: true
+Rails/CompactBlank: # new in 2.13
+  Enabled: true
+Rails/DeprecatedActiveModelErrorsMethods: # new in 2.14
+  Enabled: true
 Rails/DotSeparatedKeys: # new in 2.15
+  Enabled: true
+Rails/DuplicateAssociation: # new in 2.14
+  Enabled: true
+Rails/DuplicateScope: # new in 2.14
+  Enabled: true
+Rails/DurationArithmetic: # new in 2.13
+  Enabled: true
+Rails/EagerEvaluationLogMessage: # new in 2.11
+  Enabled: true
+Rails/ExpandedDateRange: # new in 2.11
+  Enabled: true
+Rails/FindById: # new in 2.7
   Enabled: true
 Rails/FreezeTime: # new in 2.16
   Enabled: true
+Rails/I18nLazyLookup: # new in 2.14
+  Enabled: true
+Rails/I18nLocaleAssignment: # new in 2.11
+  Enabled: true
+Rails/I18nLocaleTexts: # new in 2.14
+  Enabled: true
 Rails/IgnoredColumnsAssignment: # new in 2.17
+  Enabled: true
+Rails/Inquiry: # new in 2.7
+  Enabled: true
+Rails/MailerName: # new in 2.7
+  Enabled: true
+Rails/MatchRoute: # new in 2.7
+  Enabled: true
+Rails/MigrationClassName: # new in 2.14
+  Enabled: true
+Rails/NegateInclude: # new in 2.7
+  Enabled: true
+Rails/Pluck: # new in 2.7
+  Enabled: true
+Rails/PluckInWhere: # new in 2.7
+  Enabled: true
+Rails/RedundantPresenceValidationOnBelongsTo: # new in 2.13
+  Enabled: true
+Rails/RedundantTravelBack: # new in 2.12
+  Enabled: true
+Rails/RenderInline: # new in 2.7
+  Enabled: true
+Rails/RenderPlainText: # new in 2.7
+  Enabled: true
+Rails/RootJoinChain: # new in 2.13
   Enabled: true
 Rails/RootPathnameMethods: # new in 2.16
   Enabled: true
 Rails/RootPublicPath: # new in 2.15
   Enabled: true
+Rails/ShortI18n: # new in 2.7
+  Enabled: true
+Rails/SquishedSQLHeredocs: # new in 2.8
+  Enabled: true
 Rails/StripHeredoc: # new in 2.15
+  Enabled: true
+Rails/TimeZoneAssignment: # new in 2.10
   Enabled: true
 Rails/ToFormattedS: # new in 2.15
   Enabled: true
@@ -710,7 +650,17 @@ Rails/ToSWithArgument: # new in 2.16
   Enabled: true
 Rails/TopLevelHashWithIndifferentAccess: # new in 2.16
   Enabled: true
+Rails/TransactionExitStatement: # new in 2.14
+  Enabled: true
+Rails/UnusedIgnoredColumns: # new in 2.11
+  Enabled: true
+Rails/WhereEquals: # new in 2.9
+  Enabled: true
+Rails/WhereExists: # new in 2.7
+  Enabled: true
 Rails/WhereMissing: # new in 2.16
+  Enabled: true
+Rails/WhereNot: # new in 2.8
   Enabled: true
 Rails/WhereNotWithMultipleConditions: # new in 2.17
   Enabled: true
